--- a/how-we-test/index.html
+++ b/how-we-test/index.html
@@ -1,1 +1,452 @@
+<!doctype html>
+<html lang="en-CA">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 
+  <title>How We Test (Canada, 2026) | PrefabHomesCanada</title>
+  <meta name="description" content="How PrefabHomesCanada evaluates expandable and modular prefab homes sold online for Canadian buyers: what we verify, what we don’t assume, and how we score listings." />
+  <link rel="canonical" href="https://prefabhomescanada.github.io/how-we-test/">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#0b1020">
+  <meta name="author" content="PrefabHomesCanada Editorial">
+
+  <!-- Favicons (root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Shared CSS -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:title" content="How We Test (Canada, 2026)">
+  <meta property="og:description" content="Our evaluation method for online prefab home listings: what we verify for Canadian buyers and what we treat as unknown until proven." />
+  <meta property="og:url" content="https://prefabhomescanada.github.io/how-we-test/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/how-we-test-1200x630.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="How We Test (Canada, 2026) | PrefabHomesCanada">
+  <meta name="twitter:description" content="How we evaluate expandable and modular prefab homes for Canadian buyers." />
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/how-we-test-1200x630.webp">
+
+  <!-- JSON-LD: Organization + WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/",
+    "logo":"https://prefabhomescanada.github.io/android-chrome-512x512.png"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "@id":"https://prefabhomescanada.github.io/#website",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+
+  <!-- JSON-LD: Article -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Article",
+    "@id":"https://prefabhomescanada.github.io/how-we-test/#article",
+    "headline":"How We Test (Canada, 2026)",
+    "description":"How PrefabHomesCanada evaluates expandable and modular prefab homes sold online for Canadian buyers: what we verify, what we don’t assume, and how we score listings.",
+    "inLanguage":"en-CA",
+    "image":[
+      "https://prefabhomescanada.github.io/assets/images/og/how-we-test-1200x630.webp"
+    ],
+    "datePublished":"2026-02-14",
+    "dateModified":"2026-02-14",
+    "isPartOf":{"@id":"https://prefabhomescanada.github.io/#website"},
+    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/how-we-test/"},
+    "author":{"@type":"Organization","name":"PrefabHomesCanada Editorial"},
+    "publisher":{
+      "@type":"Organization",
+      "name":"PrefabHomesCanada",
+      "logo":{"@type":"ImageObject","url":"https://prefabhomescanada.github.io/android-chrome-512x512.png"}
+    }
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://prefabhomescanada.github.io/"},
+      {"@type":"ListItem","position":2,"name":"How We Test","item":"https://prefabhomescanada.github.io/how-we-test/"}
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" id="top">
+    <div class="wrap header-inner">
+      <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
+        <img
+          class="brand-logo"
+          src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
+          alt="PrefabHomesCanada"
+          width="1000"
+          height="250"
+          loading="eager"
+          decoding="async">
+      </a>
+
+      <button id="menuBtn" class="btn btn-ghost" type="button"
+              aria-label="Open menu" aria-expanded="false" aria-controls="nav">
+        Menu
+      </button>
+
+      <nav class="nav" id="nav" aria-label="Primary">
+        <a href="/best-prefab-homes-canada/">Best Prefab Homes</a>
+        <a href="/how-we-test/" class="is-active">How we test</a>
+        <a href="/disclosure/">Disclosure</a>
+        <a href="/privacy-policy/">Privacy</a>
+      </nav>
+
+      <div class="header-cta">
+        <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the shortlist</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-card">
+          <span class="kicker">Methodology</span>
+          <h1 class="hero-title">How We Test (Canada, 2026)</h1>
+          <p class="hero-sub">
+            Expandable and modular prefab homes sold online can look “move-in ready” in photos, but many are closer to a <strong>structure + interior shell</strong>.
+            Our methodology is designed to help Canadian buyers focus on what actually matters: <strong>documentation, climate reality, and installed cost drivers</strong>.
+          </p>
+
+          <div class="pillrow">
+            <span class="pill2">Canada-first</span>
+            <span class="pill2">Documentation-driven</span>
+            <span class="pill2">No assumptions</span>
+            <span class="pill2">Practical scoring</span>
+          </div>
+
+          <div class="cta-row">
+            <a class="btn btn-primary" href="#scorecard">See the scorecard</a>
+            <a class="btn btn-ghost" href="#what-we-verify">What we verify</a>
+          </div>
+
+          <p class="disclaimer hero-disclaimer">
+            Important: We are not your municipality. Always confirm zoning, permit requirements, and inspection rules with your local building department before purchase.
+          </p>
+        </div>
+
+        <aside class="hero-media" aria-label="Page navigation">
+          <div class="media-inner">
+            <div class="noteBox toc tocBox">
+              <h2 class="tocTitle">On this page</h2>
+              <p class="small tocSub">Jump to the part you need.</p>
+              <ul class="specs tocList">
+                <li><a href="#principles">Our testing principles</a></li>
+                <li><a href="#what-we-verify">What we verify</a></li>
+                <li><a href="#what-we-dont">What we don’t assume</a></li>
+                <li><a href="#scorecard">Scorecard (how we rank)</a></li>
+                <li><a href="#why-canada">Why Canada is different</a></li>
+              </ul>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="hr-glow"></div></div>
+
+    <!-- PRINCIPLES -->
+    <section id="principles" class="section anchor">
+      <div class="wrap">
+        <div class="section-head">
+          <div>
+            <h2>Our testing principles</h2>
+            <p>Online listings can omit key details. Our method treats missing specs as risk until proven with documentation.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>1) Documentation beats marketing</h3>
+            <p>We prioritize written specs: insulation type/thickness, structural details, windows/doors, electrical approvals, and any load claims.</p>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>2) Canadian climate is non-negotiable</h3>
+            <p>We consider winter performance, air sealing, thermal bridging, and realistic heating strategies for cold regions.</p>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>3) Installed cost matters more than sticker price</h3>
+            <p>Delivery, offload, foundation, permits, utilities, and winterization can dominate the budget. We highlight the big drivers.</p>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>4) “Not specified” is treated as unknown</h3>
+            <p>If a listing doesn’t clearly state a spec, we don’t guess. Missing specs reduce score because they add risk.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHAT WE VERIFY -->
+    <section id="what-we-verify" class="section anchor">
+      <div class="wrap">
+        <h2>What we verify (or attempt to verify)</h2>
+        <p>
+          These are the areas that most often decide whether a project is realistic in Canada.
+          If a seller can’t provide written details, we assume you’ll spend more time and money closing the gap.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Building envelope</h3>
+            <ul class="specs">
+              <li><strong>Insulation:</strong> type + thickness (walls/roof/floor)</li>
+              <li><strong>Air sealing:</strong> stated methods or details</li>
+              <li><strong>Windows/doors:</strong> specs, glazing, seals</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Structure + loads</h3>
+            <ul class="specs">
+              <li><strong>Frame:</strong> material + corrosion protection</li>
+              <li><strong>Roof:</strong> design and claims about snow load</li>
+              <li><strong>Drawings:</strong> any stamped/engineered docs (rare)</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Utilities readiness</h3>
+            <ul class="specs">
+              <li><strong>Electrical:</strong> CSA/UL/ETL approval claims (verify)</li>
+              <li><strong>Plumbing:</strong> rough-ins vs finished fixtures</li>
+              <li><strong>HVAC:</strong> realistic plan for your climate zone</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Logistics</h3>
+            <ul class="specs">
+              <li><strong>Shipping:</strong> what’s included, lead time, delivery method</li>
+              <li><strong>Offload:</strong> forklift/crane requirements</li>
+              <li><strong>Placement:</strong> access constraints and site prep needs</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            Practical rule: if a listing can’t provide clear documentation, treat it like buying a shell and budget accordingly.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHAT WE DON'T ASSUME -->
+    <section id="what-we-dont" class="section anchor">
+      <div class="wrap">
+        <h2>What we don’t assume</h2>
+        <p>
+          Some claims are common on online prefab listings. Unless a seller provides documentation, we treat these as unproven.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>“Winter ready”</h3>
+            <p>We don’t assume winter readiness without insulation specs, air sealing details, and window/door performance.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>“Legal everywhere”</h3>
+            <p>We don’t assume zoning or occupancy approval. Municipal rules vary widely across Canada.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>“Bathroom included”</h3>
+            <p>We don’t assume plumbing hookups. Often it means fixtures or a room, not a compliant water/wastewater plan.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>“Snow-load rated”</h3>
+            <p>We don’t assume roof load suitability without region-specific documentation and structural details.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- SCORECARD -->
+    <section id="scorecard" class="section anchor">
+      <div class="wrap">
+        <div class="section-head">
+          <div>
+            <h2>Scorecard: how we rank listings</h2>
+            <p>
+              We score each listing across practical categories. Higher scores usually mean less risk and fewer unknowns,
+              not necessarily “the cheapest”.
+            </p>
+          </div>
+        </div>
+
+        <div class="table-wrap" role="region" aria-label="Scorecard table scroll area" tabindex="0">
+          <table class="table" aria-label="PrefabHomesCanada scorecard categories">
+            <thead>
+              <tr>
+                <th scope="col">Category</th>
+                <th scope="col">What we look for</th>
+                <th scope="col">Why it matters</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><strong>Documentation</strong></td>
+                <td>Written specs, drawings, clear inclusions</td>
+                <td>Reduces surprises and rework</td>
+              </tr>
+              <tr>
+                <td><strong>Envelope</strong></td>
+                <td>Insulation, windows/doors, sealing details</td>
+                <td>Comfort + heating cost in Canadian winters</td>
+              </tr>
+              <tr>
+                <td><strong>Structure</strong></td>
+                <td>Frame material, roof design, load clarity</td>
+                <td>Safety + snow load concerns</td>
+              </tr>
+              <tr>
+                <td><strong>Utilities readiness</strong></td>
+                <td>Electrical approvals, plumbing clarity, HVAC plan</td>
+                <td>Pass inspections and function reliably</td>
+              </tr>
+              <tr>
+                <td><strong>Logistics</strong></td>
+                <td>Delivery/offload/placement requirements</td>
+                <td>Avoid crane surprises and site delays</td>
+              </tr>
+              <tr>
+                <td><strong>Value (realistic)</strong></td>
+                <td>Total project risk vs stated price</td>
+                <td>Helps compare apples-to-apples</td>
+              </tr>
+            </tbody>
+          </table>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="noteBoxText">
+            <strong>How to use this:</strong> if two listings look similar, choose the one with clearer documentation and envelope specs.
+            That usually saves money later.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHY CANADA -->
+    <section id="why-canada" class="section anchor">
+      <div class="wrap">
+        <h2>Why Canada is different (quick reality)</h2>
+        <p>
+          Prefab content online is often US-centric or generic. In Canada, the big friction points are climate loads, insulation expectations,
+          frost depth, and municipal approvals.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Frost + foundations</h3>
+            <p>Freeze-thaw cycles make foundations a major cost driver. Many areas require engineered bases for dwellings.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>Snow + roof loads</h3>
+            <p>Roof structure claims must match your region. Don’t rely on generic “snow rated” wording.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>Utilities + inspections</h3>
+            <p>Even with approvals, trenching, panels, hookups, and inspections are local. Plan time and budget.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>Envelope first</h3>
+            <p>Insulation + air sealing is usually the best ROI. A leaky shell makes everything else harder.</p>
+          </div>
+        </div>
+
+        <div class="cta-row" style="margin-top:16px;">
+          <a class="btn btn-primary" href="/best-prefab-homes-canada/">Back to the Top 7 guide</a>
+          <a class="btn btn-ghost" href="/disclosure/">Read our disclosure</a>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="sep"></div></div>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="wrap footer-grid">
+      <div class="footerBrand">
+        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+          <div class="footerBrandRow">
+            <img
+              class="footerIcon"
+              src="/assets/images/branding/phc-icon-1024.png"
+              width="28" height="28"
+              alt="PrefabHomesCanada icon"
+              loading="lazy" decoding="async">
+            <strong class="footerName">PrefabHomesCanada</strong>
+          </div>
+        </a>
+
+        <p class="small footerBlurb">
+          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+        </p>
+      </div>
+
+      <nav class="footerNav" aria-label="Footer">
+        <p class="footerTitle small">On this page</p>
+        <ul class="footerLinksList">
+          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/disclosure/">Disclosure</a></li>
+          <li><a href="/privacy-policy/">Privacy</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="wrap footerBottom">
+      <div class="footerLegal small">
+        <span>© <span id="y"></span> PrefabHomesCanada</span>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      </div>
+
+      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
