--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,378 @@
+<!doctype html>
+<html lang="en-CA">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
+  <meta name="format-detection" content="telephone=no">
 
+  <title>About (Canada, 2026) | PrefabHomesCanada</title>
+  <meta name="description" content="About PrefabHomesCanada: our mission, editorial approach, and how we write practical, Canada-focused prefab home guides without hype." />
+  <link rel="canonical" href="https://prefabhomescanada.github.io/about/">
+
+  <meta name="robots" content="index,follow,max-image-preview:large,max-snippet=-1,max-video-preview=-1">
+  <meta name="referrer" content="strict-origin-when-cross-origin">
+  <meta name="color-scheme" content="dark light">
+  <meta name="theme-color" content="#0b1020">
+  <meta name="author" content="PrefabHomesCanada Editorial">
+
+  <!-- Favicons (root) -->
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="icon" href="/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+
+  <!-- Shared CSS -->
+  <link rel="stylesheet" href="/assets/css/styles.css">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="PrefabHomesCanada">
+  <meta property="og:title" content="About PrefabHomesCanada (Canada, 2026)">
+  <meta property="og:description" content="Who we are, what we publish, and how we keep guides practical for Canadian prefab buyers." />
+  <meta property="og:url" content="https://prefabhomescanada.github.io/about/">
+  <meta property="og:image" content="https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="About (Canada, 2026) | PrefabHomesCanada">
+  <meta name="twitter:description" content="Who we are, what we publish, and how we keep guides practical for Canadian prefab buyers." />
+  <meta name="twitter:image" content="https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp">
+
+  <!-- JSON-LD: Organization + WebSite -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Organization",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/",
+    "logo":"https://prefabhomescanada.github.io/android-chrome-512x512.png"
+  }
+  </script>
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"WebSite",
+    "@id":"https://prefabhomescanada.github.io/#website",
+    "name":"PrefabHomesCanada",
+    "url":"https://prefabhomescanada.github.io/"
+  }
+  </script>
+
+  <!-- JSON-LD: Article -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"Article",
+    "@id":"https://prefabhomescanada.github.io/about/#article",
+    "headline":"About PrefabHomesCanada (Canada, 2026)",
+    "description":"About PrefabHomesCanada: our mission, editorial approach, and how we write practical, Canada-focused prefab home guides without hype.",
+    "inLanguage":"en-CA",
+    "image":[
+      "https://prefabhomescanada.github.io/assets/images/og/about-1200x630.webp"
+    ],
+    "datePublished":"2026-02-14",
+    "dateModified":"2026-02-14",
+    "isPartOf":{"@id":"https://prefabhomescanada.github.io/#website"},
+    "mainEntityOfPage":{"@type":"WebPage","@id":"https://prefabhomescanada.github.io/about/"},
+    "author":{"@type":"Organization","name":"PrefabHomesCanada Editorial"},
+    "publisher":{
+      "@type":"Organization",
+      "name":"PrefabHomesCanada",
+      "logo":{"@type":"ImageObject","url":"https://prefabhomescanada.github.io/android-chrome-512x512.png"}
+    }
+  }
+  </script>
+
+  <!-- JSON-LD: Breadcrumbs -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"name":"Home","item":"https://prefabhomescanada.github.io/"},
+      {"@type":"ListItem","position":2,"name":"About","item":"https://prefabhomescanada.github.io/about/"}
+    ]
+  }
+  </script>
+</head>
+
+<body>
+  <a class="skip-link" href="#main">Skip to content</a>
+
+  <header class="site-header" id="top">
+    <div class="wrap header-inner">
+      <a class="brand" href="/" aria-label="PrefabHomesCanada Home">
+        <img
+          class="brand-logo"
+          src="/assets/images/branding/prefab-homes-canada-logo-horizontal.png"
+          alt="PrefabHomesCanada"
+          width="1000"
+          height="250"
+          loading="eager"
+          decoding="async">
+      </a>
+
+      <button id="menuBtn" class="btn btn-ghost" type="button"
+              aria-label="Open menu" aria-expanded="false" aria-controls="nav">
+        Menu
+      </button>
+
+      <nav class="nav" id="nav" aria-label="Primary">
+        <a href="/best-prefab-homes-canada/">Best Prefab Homes</a>
+        <a href="/how-we-test/">How we test</a>
+        <a href="/methodology/">Methodology</a>
+        <a href="/about/" class="is-active">About</a>
+        <a href="/disclosure/">Disclosure</a>
+      </nav>
+
+      <div class="header-cta">
+        <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the shortlist</a>
+      </div>
+    </div>
+  </header>
+
+  <main id="main">
+    <!-- HERO -->
+    <section class="hero">
+      <div class="wrap hero-grid">
+        <div class="hero-card">
+          <span class="kicker">Canada-focused</span>
+          <h1 class="hero-title">About PrefabHomesCanada</h1>
+          <p class="hero-sub">
+            PrefabHomesCanada is an editorial site built to help Canadian buyers research expandable and modular prefab homes sold online.
+            We focus on what usually matters most after the purchase: <strong>documentation</strong>, <strong>winter reality</strong>, and the
+            <strong>installed cost drivers</strong> that listings often don’t explain.
+          </p>
+
+          <div class="pillrow">
+            <span class="pill2">Planning clarity</span>
+            <span class="pill2">Realistic budgets</span>
+            <span class="pill2">No hype</span>
+            <span class="pill2">Buyer checklists</span>
+          </div>
+
+          <div class="cta-row">
+            <a class="btn btn-primary" href="/best-prefab-homes-canada/">Read the Top 7 guide</a>
+            <a class="btn btn-ghost" href="/methodology/">See our methodology</a>
+          </div>
+
+          <p class="disclaimer hero-disclaimer">
+            Important: We are not a building department and we don’t provide legal advice. Always confirm zoning, permit, and inspection requirements with your municipality.
+          </p>
+        </div>
+
+        <aside class="hero-media" aria-label="Page navigation">
+          <div class="media-inner">
+            <div class="noteBox toc tocBox">
+              <h2 class="tocTitle">On this page</h2>
+              <p class="small tocSub">Quick overview.</p>
+              <ul class="specs tocList">
+                <li><a href="#mission">Our mission</a></li>
+                <li><a href="#what-we-do">What we publish</a></li>
+                <li><a href="#who-its-for">Who it’s for</a></li>
+                <li><a href="#principles">Editorial principles</a></li>
+                <li><a href="#affiliates">How we’re funded</a></li>
+              </ul>
+            </div>
+          </div>
+        </aside>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="hr-glow"></div></div>
+
+    <!-- MISSION -->
+    <section id="mission" class="section anchor">
+      <div class="wrap">
+        <div class="section-head">
+          <div>
+            <h2>Our mission</h2>
+            <p>Help Canadian buyers make better decisions by reducing surprises and highlighting what matters after checkout.</p>
+          </div>
+        </div>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>We translate “listing language” into real planning</h3>
+            <p>
+              Many online prefab listings look turnkey, but arrive as a structure or interior shell.
+              We focus on the practical gap between what you see in photos and what you need to live comfortably in Canada.
+            </p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>We prioritize clarity over hype</h3>
+            <p>
+              If insulation, windows, electrical approvals, or snow-load assumptions aren’t clearly stated, we treat them as unknown.
+              Our job is to flag uncertainty, not to “sell a dream.”
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHAT WE DO -->
+    <section id="what-we-do" class="section anchor">
+      <div class="wrap">
+        <h2>What we publish</h2>
+        <p>
+          PrefabHomesCanada publishes buyer guides, checklists, and planning sections that cover the parts most people learn the hard way.
+        </p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Ranked guides</h3>
+            <ul class="specs">
+              <li>Shortlists (Top 7 / Top 10) with clear “best for” scenarios</li>
+              <li>Reviews that separate what’s included vs what’s required</li>
+              <li>Canada-first risk notes (envelope, cold weather, snow load)</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Planning sections</h3>
+            <ul class="specs">
+              <li>Installed cost drivers: foundation, delivery, utilities, permits</li>
+              <li>Questions to ask sellers before buying</li>
+              <li>Common add-ons: internet, temporary power, heating/cooling</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="cta-row" style="margin-top:16px;">
+          <a class="btn btn-primary" href="/best-prefab-homes-canada/">See the latest guide</a>
+          <a class="btn btn-ghost" href="/how-we-test/">How we test</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- WHO IT'S FOR -->
+    <section id="who-its-for" class="section anchor">
+      <div class="wrap">
+        <h2>Who it’s for</h2>
+        <p>We write for buyers who want a realistic view of prefab projects in Canada.</p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>Best fit</h3>
+            <ul class="specs">
+              <li>People comparing online prefab listings and want fewer surprises</li>
+              <li>Buyers planning cabins, guest suites, studios, or phased builds</li>
+              <li>Anyone who wants checklists before contacting sellers</li>
+            </ul>
+          </div>
+
+          <div class="card grid-span-6">
+            <h3>Not a fit</h3>
+            <ul class="specs">
+              <li>Buyers expecting a fully code-approved Canadian home “out of the box”</li>
+              <li>Anyone looking for legal, engineering, or permit approvals from a website</li>
+              <li>People who want “one price” that applies to every municipality</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- PRINCIPLES -->
+    <section id="principles" class="section anchor">
+      <div class="wrap">
+        <h2>Editorial principles</h2>
+        <p>These rules keep our guides consistent, even when listings change.</p>
+
+        <div class="grid">
+          <div class="card grid-span-6">
+            <h3>1) Specs beat adjectives</h3>
+            <p>If a listing says “luxury” or “winter ready” but doesn’t provide measurable specs, we treat it as a claim, not a fact.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>2) Unknown stays unknown</h3>
+            <p>If insulation values, window specs, approvals, or load assumptions aren’t clearly stated, we label them as not specified.</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>3) Installed cost matters</h3>
+            <p>We emphasize site work, permits, utilities, and winterization because they often drive the “real budget.”</p>
+          </div>
+          <div class="card grid-span-6">
+            <h3>4) Canada-first reality</h3>
+            <p>Cold weather, snow load, and municipal rules change the game. Our guides assume Canadian constraints, not generic marketing.</p>
+          </div>
+        </div>
+
+        <div class="noteBox noteBox--mt14">
+          <p class="small noteBoxText">
+            Want the full framework? Read <a href="/methodology/" style="text-decoration:underline;text-underline-offset:3px;">Methodology</a>.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- AFFILIATES -->
+    <section id="affiliates" class="section anchor">
+      <div class="wrap">
+        <h2>How we’re funded</h2>
+        <div class="noteBox">
+          <p class="disclaimer">
+            Some links on PrefabHomesCanada are affiliate links. If you click and make a purchase, we may earn a small commission at no additional cost to you.
+            This helps support the site and allows us to keep publishing practical, Canada-focused guides.
+          </p>
+          <p class="small" style="margin:0;">
+            Read full details on our <a href="/disclosure/" style="text-decoration:underline;text-underline-offset:3px;">Disclosure</a> page.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <div class="wrap"><div class="sep"></div></div>
+  </main>
+
+  <footer class="site-footer" role="contentinfo">
+    <div class="wrap footer-grid">
+      <div class="footerBrand">
+        <a class="footerBrandLink" href="/" aria-label="PrefabHomesCanada home">
+          <div class="footerBrandRow">
+            <img
+              class="footerIcon"
+              src="/assets/images/branding/phc-icon-1024.png"
+              width="28" height="28"
+              alt="PrefabHomesCanada icon"
+              loading="lazy" decoding="async">
+            <strong class="footerName">PrefabHomesCanada</strong>
+          </div>
+        </a>
+
+        <p class="small footerBlurb">
+          A practical guide for Canadian buyers researching expandable and modular prefab homes. No hype. Just planning clarity.
+        </p>
+      </div>
+
+      <nav class="footerNav" aria-label="Footer">
+        <p class="footerTitle small">Links</p>
+        <ul class="footerLinksList">
+          <li><a href="/best-prefab-homes-canada/">Best prefab homes</a></li>
+          <li><a href="/how-we-test/">How we test</a></li>
+          <li><a href="/methodology/">Methodology</a></li>
+          <li><a href="/disclosure/">Disclosure</a></li>
+          <li><a href="/privacy-policy/">Privacy</a></li>
+        </ul>
+      </nav>
+    </div>
+
+    <div class="wrap footerBottom">
+      <div class="footerLegal small">
+        <span>© <span id="y"></span> PrefabHomesCanada</span>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <a href="/privacy-policy/">Privacy policy</a>
+        <span class="footerDot" aria-hidden="true">•</span>
+        <span class="footerMuted">Listings can change. Verify documentation before purchase.</span>
+      </div>
+
+      <a class="footerTop small" href="#top" aria-label="Back to top">Back to top ↑</a>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
